2003-11-15	ujwal

    * ARRAY code is working again, i.e. as well as it was before.

2003-11-13	ujwal

    * Added Xcode project.
    * Update Makefile to work with both Xcode and ProjectBuilder.
    * Fixed ARRAY code build errors. Still does not run correctly.

2003-11-09	ujwal

    * Removed hardcoded references to Osaka-Mono font.

2003-11-06	ujwal

    * Fixed bug causing incorrect number of columns.
    * Updating screen on keydown.

2003-11-05	ujwal

    * Fixed resizing problems when toolbar visibility is toggled by overriding 
      behavior of toolbar button.

2003-11-04	fabian
    
    * Checking in the new icon
    * Checking in German localization
    * Updated webpage and help files for new release
    
2003-10-15	fabian

    * Put in Ujwal's fix of crash when enforce aligment unchecked
    
2003-10-10	fabian

    * Corrected the encoding for the French version of iTerm.strings.
    
2003-10-09	ujwal

    * Reverted to individual timer threads for each session. Other code 
      is not fully tested yet.

2003-10-09	fabian

    * Updated all localizations for Script menu.
    
2003-10-07	ujwal

    * Fixed bug in VT100Screen: clearBuffer.

2003-10-05	ujwal

    * Put in a Scripts menu in the main menu to run user defined scripts.
      The scripts need to be stored in in the ~/Library/Application Support/iTerm/Scripts 
      directory.
    * Fixed compiler warnings about weak link by removing unused link against 
      CoreFoundation framework.

2003-10-03	fabian

    * Put in a link to nightly CVS tarball and CVS build in webpages
    
2003-10-03	ujwal

    * Put in exception handlers in VT100Screen wherever screen lock is 
      aquired. This makes sure that the screen lock is released when 
      an exception is raised.

2003-10-02	ujwal

    * Added some more scripting support to get and set the current 
      terminal.

2003-10-01	ujwal

    * Default font is now chosen with [NSFont userFixedPitchFontOfSize:0].

2003-09-30	ujwal
