@@ -1,3 +1,7 @@
+2003-11-27	ujwal
+
+    * Added method in PreferencePanel to set tabViewType.
+
 2003-11-15	ujwal
 
     * ARRAY code is working again, i.e. as well as it was before.
